Folder creation added

--- a/client/src/components/UI/navbar/navbar.module.scss
+++ b/client/src/components/UI/navbar/navbar.module.scss
@@ -5,7 +5,7 @@
 		@apply flex items-center flex-grow;
 
 		&__title {
-			@apply text-xl font-bold text-fuchsia-800;
+			@apply text-xl font-bold text-violet-600;
 		}
 	}
 	.sign__links {
