--- a/client/src/components/UI/context-menu/contextMenu.scss
+++ b/client/src/components/UI/context-menu/contextMenu.scss
@@ -1,5 +1,5 @@
 .context__menu {
-	@apply fixed w-80 text-neutral-700 text-l bg-white shadow-primary rounded-md z-40;
+	@apply absolute w-80 text-neutral-700 text-l bg-white shadow-primary rounded-md z-40;
 	display: none;
 }
 
