--- a/client/src/components/file-list/fileList.module.scss
+++ b/client/src/components/file-list/fileList.module.scss
@@ -1,3 +1,3 @@
 .file__list {
-	@apply mt-8 grid grid-cols-5 gap-3 flex text-sm font-medium text-neutral-600
+	@apply grid grid-cols-5 gap-3 flex text-sm font-medium text-neutral-600
 }
