Interface update, new features

--- a/client/src/components/UI/breadcrumbs/breadcrumbs.module.scss
+++ b/client/src/components/UI/breadcrumbs/breadcrumbs.module.scss
@@ -1,5 +1,5 @@
 .breadcrumbs {
-	@apply mt-4 py-1 text-lg font-medium text-neutral-400 flex border-b border-neutral-200
+	@apply pb-2 px-1 text-lg font-medium text-neutral-400 flex border-b border-neutral-200
 }
 .breadcrumbs__item {
 	@apply mr-1 flex items-center
