--- a/client/src/components/UI/navbar/navbar.module.scss
+++ b/client/src/components/UI/navbar/navbar.module.scss
@@ -1,14 +1,14 @@
 .wrapper {
-	@apply py-2 px-3 mb-6 grid grid-primary items-center border-b border-neutral-300;
+	@apply py-2 grid grid-primary items-center border-b border-neutral-300;
 
 	.logo {
-		@apply flex items-center flex-grow cursor-pointer;
+		@apply flex items-center flex-grow ml-7 cursor-pointer;
 
 		&__title {
 			@apply text-xl font-bold text-violet-600;
 		}
 	}
 	.sign__links {
-		@apply ml-auto flex items-center text-gray-500;
+		@apply ml-auto flex items-center mr-7 text-gray-500;
 	}
 }
