Used space indicator added

--- a/client/src/components/left-side-menu/leftSideMenu.scss
+++ b/client/src/components/left-side-menu/leftSideMenu.scss
@@ -7,5 +7,5 @@
 }
 
 .storage {
-	@apply grid grid-item items-center py-2 px-9 text-sm font-medium text-neutral-600
+	@apply grid grid-item items-center mb-2 py-2 px-9 text-sm font-medium text-neutral-600
 }
