Registration/Login styles updated

--- a/client/src/components/UI/modal/modal.module.scss
+++ b/client/src/components/UI/modal/modal.module.scss
@@ -5,7 +5,7 @@
 		@apply font-black mb-4;
 	}
 	.inputs {
-		@apply flex flex-col mb-6;
+		@apply mb-6;
 	}
 	.toggle {
 		@apply mt-6 text-center text-sm;
